Started the eircode implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>
-  {{title}}
+  Test Api
 </h1>
+<button (click)="getAddressByEircode(1234)">Get Address By Eircode</button>
+<div>
+  <h2>ADDRESS EIRCODE</h2>
+  <pre >
+    {{data | json}}
+  </pre>
+</div>
