Created a simple get and show data component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <h1>
-  Test Api
+  Keeper Test Api
 </h1>
-<button (click)="getAddressByEircode(1234)">Get Address By Eircode</button>
-<div>
-  <h2>ADDRESS EIRCODE</h2>
-  <pre >
-    {{data | json}}
-  </pre>
-</div>
+<app-show-data></app-show-data>
